<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />

    <item
        android:title="@string/more"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/action_about"
                android:title="@string/about"
                />
            <item
                android:id="@+id/action_help"
                android:title="@string/help"
                />
        </menu>
    </item>

</menu>